Preserve order of properties